--- a/Course1/Week4/Building+your+Deep+Neural+Network+-+Step+by+Step/Building+your+Deep+Neural+Network+-+Step+by+Step+v8.ipynb
+++ b/Course1/Week4/Building+your+Deep+Neural+Network+-+Step+by+Step/Building+your+Deep+Neural+Network+-+Step+by+Step+v8.ipynb
@@ -47,18 +47,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
-      "/opt/conda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import h5py\n",
@@ -130,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -347,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -486,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -520,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -586,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -632,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -704,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -751,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -808,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -843,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -935,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -974,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1058,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -1099,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1116,8 +1105,8 @@
       "db = [[-0.05729622]]\n",
       "\n",
       "relu:\n",
-      "dA_prev = [[ 0.44090989  0.        ]\n",
-      " [ 0.37883606  0.        ]\n",
+      "dA_prev = [[ 0.44090989 -0.        ]\n",
+      " [ 0.37883606 -0.        ]\n",
       " [-0.2298228   0.        ]]\n",
       "dW = [[ 0.44513824  0.37371418 -0.10478989]]\n",
       "db = [[-0.20837892]]\n"
@@ -1227,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -1285,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1371,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -1406,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1488,15 +1477,10 @@
   }
  ],
  "metadata": {
-  "coursera": {
-   "course_slug": "neural-networks-deep-learning",
-   "graded_item_id": "c4HO0",
-   "launcher_item_id": "lSYZM"
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1512,5 +1496,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
